--- a/style.css
+++ b/style.css
@@ -79,6 +79,17 @@ nav li a{
   margin-top: 20px;
   margin-right: 10px;
 }
+.btn-call{
+  font-weight: bold;
+  width: 130px;
+  height: 35px;
+  border-radius: 5px;
+  border: 2px solid #FD6E0A;
+  color: #FD6E0A;
+  background-color: white;
+  margin-top: 20px;
+  margin-right: 10px;
+}
 .pragraph{
  color:#474747 ;
  padding-top: 30px;
